# pystructopt

./: .gitignore  Makefile  README.md  README_tmp.md  foo.py  pyproject.toml  pyrightconfig.json  test.py
examples/: basic.py
pystructopt/: __init__.py  _arg.py  _dataclass_parser.py  _help.py  _parse.py  parse.py  utils.py
scripts/: gen_readme.py
tests/: test_help.py  test_main.py  test_parse.py  test_utils.py
