[tool.poetry]
name = "pystructopt"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]

[tool.poetry.dependencies]
dataclass-utils = ">=0.7.12,<1"
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
