[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pystructopt"
version = "0.1.7"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]

[tool.versionup]
tag = true
commit = true
files = [ "pystructopt/VERSION.py",]

[tool.poetry.dependencies]
dataclass-utils = ">=0.7.14,<1"
python = "^3.7"
typing-extensions = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.2"
black = "^21.6b0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
